# syoc

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  Driver.cpp  LICENSE  Placeholder.hpp  README.md  current.txt  sync.sh  x.py
.github/workflows/: check-tests.yml  deploy-sync.yml
CodeGen/: AsmPrinter.cpp  AsmPrinter.hpp  CMakeLists.txt  CodeGen.hpp  FrameLowering.cpp  FrameLowering.hpp  MEISel.cpp  MEISel.hpp  SimpleRA.cpp  SimpleRA.hpp
Common/: CMakeLists.txt  Common.def  TargetInfo.def
IR/: ASM.cpp  ASM.hpp  AST.hpp  BasicBlock.hpp  CMakeLists.txt  Constant.hpp  IR.cpp  IR.def  IR.hpp  Impl.cpp  Instruction.hpp  Scope.hpp  Type.hpp  Value.hpp  Variable.hpp  YIR.cpp  YIR.hpp
Parser/: CMakeLists.txt  Parser.hpp
Pass/: AllocaDefinitionHelper.hpp  AnalysisPassCollection.hpp  AssignIdentityHelper.hpp  BBPredSuccAnalysis.hpp  BasicBlockTraversalAnalysis.hpp  CFGAnalysis.cpp  CFGAnalysis.hpp  CMakeLists.txt  ConstantFolding.cpp  ConstantFolding.hpp  ConstantInitializerFold.hpp  DeadCodeElimination.cpp  DeadCodeElimination.hpp  Dump.cpp  Dump.hpp  FixTimeMeasurement.hpp  IDominatorAnalysis.cpp  IDominatorAnalysis.hpp  IRDump.hpp  IRLegalize.cpp  IRLegalize.hpp  InstCombine.cpp  InstCombine.hpp  IteratedDominanceFrontierAnalysis.cpp  IteratedDominanceFrontierAnalysis.hpp  LocalCopyPropagation.hpp  MLivenessAnalysis.cpp  MLivenessAnalysis.hpp  MachineDCE.cpp  MachineDCE.hpp  OffsetFold.hpp  PassBase.hpp  PassCollection.hpp  PassImpl.cpp  PeepHole.cpp  PeepHole.hpp  PromoteMem2Reg.cpp  PromoteMem2Reg.hpp  PromoteMemToReg.hpp  SimpleAllocationElimination.cpp  (+9 more)
Pass/NewPass/: Dump.cpp  Dump.hpp  IDominatorAnalysis.cpp  IDominatorAnalysis.hpp  PassCollection.hpp  SimpleAllocationElimination.cpp  SimpleAllocationElimination.hpp  SimplifyCFG.cpp  SimplifyCFG.hpp  TraversalHelper.hpp  Tree2SSA.cpp  Tree2SSA.hpp
Pass/NewPass/Include/: AssignIdentity.hpp  AssignIdentityHelper.hpp  CFGAnalysis.hpp  Dump.hpp  PassCollection.hpp  SimplifyCFG.hpp  TraversalHelper.hpp  (+1 more)
Test/: brainfuck-bootstrap.sy
Test/Runtime/: sylib.c  sylib.h
Test/Self/: alloc.sy  arr_call.sy  arr_defn.sy  early_ret.sy  if_test.sy  unreachable.sy  while.sy
Test/Set1/: 046_op_priority4.in  069_greatest_common_divisor.in  072_percolation.in  079_calculator.in  080_color.in
Test/Set2/: 082_reverse_output.in  083_brainfk.in  084_expr_eval.in  085_dijkstra.in  086_full_conn.in  087_gcd.in  088_hanoi.in  090_int_io.in  091_kmp.in  092_max_flow.in  093_n_queens.in  099_skip_spaces.in  108_many_params.in  114_register_alloc.in  115_nested_calls.in  117_nested_loops.in
Test/Set3/: 01_mm2.in  01_mm3.in  02_mv2.in  02_mv3.in  03_sort1.in  04_spmv3.in
Test/Set4/: 14_or.in  16_nequal.in  17_less.in  18_cal_prio.in  19_neg_expr.in  21_suminput.in  63_simple_atoi.in  64_alpha_count.in  79_gcd.in
Test/Set5/: 051_logi_assign.in  058_short_circuit.in  067_sort_test7.in  068_genealogical_tree.in
Test/Set6/: 01_mm1.in  02_mv1.in  03_sort2.in  03_sort3.in  04_spmv1.in  04_spmv2.in  conv0.in  conv1.in  conv2.in  fft0.in  fft1.in  fft2.in  shuffle0.in  shuffle1.in  shuffle2.in  transpose0.in  transpose1.in  transpose2.in
Test/Set7/: brainfuck-bootstrap.in  brainfuck-mandelbrot-nerf.in  brainfuck-pi-nerf.in  crypto-1.in  crypto-2.in  crypto-3.in  dead-code-elimination-1.in  dead-code-elimination-2.in  dead-code-elimination-3.in  floyd-0.in  floyd-1.in  floyd-2.in  gameoflife-gosper.in  gameoflife-oscillator.in  gameoflife-p61glidergun.in  hoist-2.in  hoist-3.in  instruction-combining-1.in  instruction-combining-3.in  integer-divide-optimization-1.in  integer-divide-optimization-2.in  integer-divide-optimization-3.in  sl1.in  sl2.in  sl3.in
Transformer/: CMakeLists.txt  Pass.hpp  Transformer.hpp
Transformer/Pass/: ConstantInitializerFold.hpp  IRDump.hpp  IRInterpreter.hpp  Tree2SSA.hpp  TypeCheck.hpp
Tree/: CMakeLists.txt  Tree.cpp  Tree.hpp
Util/: CMakeLists.txt  CppLegacy.hpp  Filter.hpp  GraphHelper.hpp  List.hpp  OptionParser.hpp  RuntimeStackUtil.hpp  Scope.hpp  StringUtil.hpp  TrivialValueList.hpp  TrivialValueVector.hpp
(+5 files in other folders)
